Fixed globally defined Color constants and their usage/reference in all affected files

--- a/www/error_static.html
+++ b/www/error_static.html
@@ -19,9 +19,9 @@
 
 <body>
     <center>
-        <table height="97%" bgcolor="#000000" cellspacing="0" cellpadding="0" width="860">
+        <table height="97%" bgcolor="000000" cellspacing="0" cellpadding="0" width="860">
             <tr>
-                <td valign="top" bgcolor="#141414" height="100%">
+                <td valign="top" bgcolor="141414" height="100%">
                     <a name="top"></a>
 
                     <div align="center">
@@ -116,7 +116,7 @@
             </tr>
 
             <tr>
-                <td width="100%" align="center" valign="center" class="small" bgcolor="#242424" style="padding: 2px; border-top-style: solid; border-top-width: 1px; border-top-color: #CBBA79;">
+                <td width="100%" align="center" valign="center" class="small" bgcolor="242424" style="padding: 2px; border-top-style: solid; border-top-width: 1px; border-top-color: #CBBA79;">
                     Parsetime: n/a | 0 SQL Querys | <nobr>444 B</nobr> | r: Alle <br />
                     Relative Anzahl Sonnenflecken: n/a | Magnetfeldrichtungsst&#228;rke: n/a | Solarwind Dichte: n/a <br />
                     <script type="text/javascript">
