Fixed CSS definition and file pathes for static CSS and Error files

--- a/www/error_static.html
+++ b/www/error_static.html
@@ -7,9 +7,9 @@
     <meta name="ICBM" content="47.4233, 9.37" />
 
     <title>Home - zorg.ch - OFFLINE!</title>
-    <link rel="stylesheet" type="text/css" href="includes/night.css" />
+    <link rel="stylesheet" type="text/css" href="/includes/night.css" />
     <link rel="shortcut icon" href="fav_night.ico" type="image/x-icon" />
-    <script type="text/javascript" src="includes/javascript.js"></script>
+    <script type="text/javascript" src="/includes/javascript.js"></script>
     <script type="text/javascript">
 	//<![CDATA[
     var layout = "day";
@@ -62,7 +62,7 @@
                                             <td class="small" width="300" align="right" valign="middle">
                                                 <table cellpadding="0" cellspacing="0" border="0">
                                                     <tr>
-                                                        <td class="small" align="right">23:23 <img src="images/sunrise.jpg" alt="Sunrise @ 23:23" title="Sunrise @ 23:23" /></td>
+                                                        <td class="small" align="right">23:23 <img src="/images/sunrise.jpg" alt="Sunrise @ 23:23" title="Sunrise @ 23:23" /></td>
                                                     </tr>
                                                 </table>
                                             </td>
